# HDDE-A-Zero-Allocation-Hierarchical-Utility-Architecture

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pr_tests.yml  scheduled_tests.yml
examples/: basic_combat.rs  hdde_simulation.rs
src/: engine.rs  lib.rs
src/belief/: mod.rs  record.rs  store.rs
src/bridge/: executor.rs  ffi.rs  mod.rs  world.rs
src/comm/: channel.rs  event.rs  mod.rs
src/core/: action.rs  id.rs  math.rs  mod.rs  rng.rs  time.rs
src/registry/: mod.rs  needs.rs  soa.rs  trace.rs
src/stages/: candidates.rs  commit.rs  comms.rs  decay.rs  ingestion.rs  mod.rs  needs.rs  propagation.rs  utility.rs
