[package]
name = "enemy-ai-engine"
version = "0.1.0"
edition = "2021"
description = "A high-performance, modular, plugin-based Enemy AI engine for games"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "ai", "pathfinding", "utility-ai", "game-engine"]
categories = ["game-development", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
ron = "0.12"
smallvec = { version = "1", features = ["serde"] }
fixedbitset = "0.5"
rand = "0.8"
rand_chacha = "0.3"
rayon = { version = "1", optional = true }

[dev-dependencies]

[features]
default = ["default-navigation"]
default-navigation = []
parallel = ["dep:rayon"]
debug-info = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
